src/test/resources/cocos/valid/imports/reexportImports/Symbol Definition2.sysml
package 'Symbol Definition2' {
  public import 'Symbol Definition';
  private import 'NoTransitivImport';
  private block VehiclePrivate;
  block BusPublic;
}