src/test/resources/cocos/invalid/imports/elementNameAlreadyExists1/Import Vehicle.sysml
package 'Import Vehicle'{
  import 'Symbol Definition'::Vehicle as AlreadyInScope;
  block AlreadyInScope;
}